--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-range": "^1.8.14",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.2"
   },
