--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.8",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "expo-jwt": "^1.7.1",
     "formik": "^2.4.5",
     "json-server": "^0.17.4",
     "jss": "^10.10.0",
